Add search to fetch workers
